[package]
name = "ssr"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
ratatui = "0.28.1"
crossterm = "0.28.1"
tui-textarea = "0.6.1"
ureq = {version = "3.0.0-rc1", features = ["json", "gzip", "brotli", "charset"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
either = {version="1.13.0", features = ["serde"]}
directories = "5.0.1"
regex = "1.11.0"
ratatui-image = "2.0.1"
image = "0.25.2"
cfg-if = "0.1"
[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.5"
